@@ -1,7 +1,8 @@
 ###### TWE 4.9-1 RELEASED ######
 2013-02-15 Sasa Bojanic <sasaboy@together.at>
    # Shark mode: now validating if variables' InitialValue is referencing DynamicScript variable (it is forbidden)
-
+   # Shark mode: fixed bug in Shark's tooltip manager
+   
 2013-02-14 Sasa Bojanic <sasaboy@together.at>
    # Now validating variables' InitialValue expressions 
    # Shark mode: now validating variables' InitialValue cross/self/implicit cross references
